<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/meu_treino"
        android:textSize="30sp"
        android:textColorHint="#2D3B6E"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="254dp"
        android:layout_height="230dp"
        android:background="@drawable/logo" />

    <Button
        android:id="@+id/buttonExecutarTreino"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/executar_treino"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:backgroundTint="#7184c7"
        android:enabled="false"
        />

    <Button
        android:id="@+id/buttonConfiguracoes"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/configuracoes"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:backgroundTint="#2D3B6E"
        />

</LinearLayout>