<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarExercicio"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textCadastroExercicios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadastrar_exercícios"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColorHint="#2D3B6E"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_close_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textCadastroExercicios"
                    android:layout_marginEnd="15dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textSubCadastroExercicios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insira_os_dados_abaixo"
                android:layout_marginStart="15dp"
                android:textSize="14sp"
                android:textColorHint="#2D3B6E"/>

            <TextView
                android:id="@+id/titleNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_exercicio"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textColorHint="#2D3B6E"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#662D3B6E"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxStrokeWidth="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textNome"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/nome_do_exercício_placeholder"
                    android:background="@drawable/text_input_background"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/titleImagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imagem_exercicio"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:textColorHint="#2D3B6E"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#662D3B6E"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxStrokeWidth="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textImagem"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/link_da_imagem_exercicio"
                    android:background="@drawable/text_input_background"
                    android:textSize="16sp"
                    android:inputType="textUri"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="#D9D9D9"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/imagem_do_exercício_cadastro" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/salvar_exercicio"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:backgroundTint="#2D3B6E"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="30dp"/>


    </androidx.cardview.widget.CardView>

</LinearLayout>