<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercicios"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textMeusExercicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/meus_exercícios"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColorHint="#2D3B6E"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_close_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textMeusExercicios"
                    android:layout_marginEnd="15dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/favorito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/baseline_star_outline_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:id="@+id/textExercicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/abdominal_canivete"
                    android:textColorHint="#2D3B6E"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/favorito"
                    app:layout_constraintTop_toTopOf="@+id/favorito" />

                <TextView
                    android:id="@+id/iconEditarExercicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_edit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textExercicio"
                    android:layout_marginEnd="15dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/favorito2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/baseline_star_outline_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:id="@+id/textExercicio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/supino_máquina"
                    android:layout_marginStart="15dp"
                    android:textColorHint="#2D3B6E"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/favorito2"
                    app:layout_constraintTop_toTopOf="@+id/favorito2" />

                <TextView
                    android:id="@+id/iconEditarExercicio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/outline_edit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textExercicio2"
                    android:layout_marginEnd="15dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/cadastrar"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:backgroundTint="#2D3B6E"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="40dp"/>


    </androidx.cardview.widget.CardView>

</LinearLayout>